# dexpaprika-cli

./: .gitignore  Cargo.toml  README.md  install.sh  skill.md  streaming-skill.md
.github/workflows/: release.yml
src/: client.rs  main.rs  shell.rs
src/commands/: attribution.rs  mod.rs  networks.rs  onboard.rs  pools.rs  search.rs  stats.rs  status.rs  stream.rs  tokens.rs  version.rs
src/output/: mod.rs  networks.rs  pools.rs  search.rs  stats.rs  status.rs  stream.rs  tokens.rs
