[package]
name = "dexpaprika-cli"
version = "0.1.5"
edition = "2021"
description = "DexPaprika CLI — free DEX data from the terminal. Pools, tokens, on-chain trades across 33+ chains."
license = "MIT"
repository = "https://github.com/coinpaprika/dexpaprika-cli"
keywords = ["dexpaprika", "dex", "defi", "cli", "cryptocurrency"]
categories = ["command-line-utilities"]

[[bin]]
name = "dexpaprika-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rustyline = "15"
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
